edited contacts and projects

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="styles/main.css"></link>
@@ -13,8 +14,6 @@
 <body>
   <div ng-include="'./partials/navbar.html'"></div>
   <div class="col-xs-10 col-xs-offset-1" ng-view></div>
-
-
 
   </div>
   <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
@@ -31,12 +30,8 @@
 
   <script type="text/javascript" src="./javascripts/services/PersonalSiteService.js"></script>
 
-  <script type="text/javascript" src="./javascripts/controllers/AboutmeCtrl.js"></script>
-  <script type="text/javascript" src="./javascripts/controllers/ContactCtrl.js"></script>
-  <script type="text/javascript" src="./javascripts/controllers/ProfessionalCtrl.js"></script>
   <script type="text/javascript" src="./javascripts/controllers/ProjectsCtrl.js"></script>
   <script type="text/javascript" src="./javascripts/controllers/BlogCtrl.js"></script>
-  <script type="text/javascript" src="./javascripts/controllers/NavbarCtrl.js"></script>
 </body>
 
 </html>
